--- a/index.html
+++ b/index.html
@@ -10,17 +10,24 @@
 <body>
 <!--    <button  createTask()">Create new Task</button>-->
 
-    <div class="box ">
-            <h1 id="title">Shopping List</h1>
-            <div id="formBuy">
-                <input placeholder="Title..." id="nameProduct" class="form-control">
-                <input type="number" id="countProducts">
-                <button  id="addNote" onclick="addProduct()">Add</button>
-            </div>
-
-            <div id="listProducts">
-
-            </div>
+    <div class="box">
+        <h1 class="title">Shopping List</h1>
+        <div class="container-buy">
+            <input type="text"
+                   placeholder="Title..."
+                   id="name-products"
+                   class="style-input style-name-input"/>
+            <input type="number"
+                   value="1"
+                   inputmode="numeric"
+                   class="style-input style-name-input"
+                   id="count-products"/>
+            <button type="button"
+                    id="addNote"
+                    onclick="addProduct()">Add
+            </button>
+        </div>
+        <div id="listProducts"></div>
     </div>
     <script src="index.js"></script>
 </body>
