--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                    placeholder="Title..."
                    id="name-products"
                    class="style-input style-name-input"/>
-            <input type="number"
+            <input type="number"Ы
                    value="1"
                    inputmode="numeric"
                    class="style-input style-name-input"
