--- a/index.html
+++ b/index.html
@@ -3,36 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="styles/index.css" type="text/css">
 </head>
 <body>
 <!--    <button  createTask()">Create new Task</button>-->
 
-    <div class="box">
+    <main class="box">
         <h1 class="title">Shopping List</h1>
-        <div class="container-buy">
-            <input type="text"
+        <div class="box__form">
+            <input 
+                   type="text"
                    placeholder="Title..."
-                   id="name-products"
-                   class="style-input style-name-input"/>
-            <input type="number"Ы
+                   id="name_products"
+                   />
+            <input 
+                   type="number"
                    value="1"
                    inputmode="numeric"
-                   class="style-input style-name-input"
-                   id="count-products"/>
-
-            <button type="button"
-                    id="addNote"
-                    onclick="addProduct()">Add
+                   id="count_products"/>
+            <button
+                    type="button"
+                    id="addNote">
+                    Add
             </button>
         </div>
-        <div id="listProducts"></div>
-    </div>
-    <script src="index.js"></script>
+        <article id="box__listProducts"></article>
+    </main>
+    <script type="module" src="scripts/index.js"></script>
 </body>
 </html>
 
-
-<!--class="container" id="app" style="margin: 1em auto"-->
