replaced the teg article to section, also change remove and checkbox, last change add exta file for list products

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     Add
             </button>
         </div>
-        <article id="box__listProducts"></article>
+        <section id="box__listProducts"></section>
     </main>
     <script type="module" src="scripts/index.js"></script>
 </body>
