--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                        type="text"
                        placeholder="Title..."
                        id="name_products"
+                       maxlength="20"
                        required
                        />
                 <input
