--- a/index.html
+++ b/index.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
-
-    <link rel="stylesheet" href="styles/index.css" type="text/css">
+    <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
     <main class="box">
-        <h1 class="title">Shopping List</h1>
-            <form action="/" id="box__form" method="post">
-                <input
-                       type="text"
-                       placeholder="Title..."
-                       id="name_products"
-                       maxlength="20"
-                       required
-                       />
-                <input
-                       type="number"
-                       min="1"
-                       value="1"
-                       inputmode="numeric"
-                       id="count_products"/>
-                <input
-                        type="submit"
-                        value="Add"
-                        class="addNote">
-            </form>
-        <section id="box__listProducts"></section>
+        <h1 class="box__title">Shopping List</h1>
+        <form action="/" id="box__form" class="box__form" method="post">
+            <input
+                type="text"
+                placeholder="Title..."
+                id="form__name-products"
+                class="form__name-products"
+            />
+            <input
+                type="number"
+                value="1"
+                inputmode="numeric"
+                id="form__count-products"
+                class="form__count-products"
+            />
+            <input
+                type="submit"
+                value="Add"
+                class="form__add-button"
+            />
+        </form>
+        <section id="box__product-list" class="box__product-list"></section>
     </main>
     <script type="module" src="scripts/index.js"></script>
 </body>
